; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/cx23885/extr_netup-init.c_i2c_av_and_or.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/cx23885/extr_netup-init.c_i2c_av_and_or.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_adapter = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.i2c_adapter*, i32, i32, i32)* @i2c_av_and_or to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @i2c_av_and_or(%struct.i2c_adapter* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.i2c_adapter*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.i2c_adapter* %0, %struct.i2c_adapter** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.i2c_adapter*, %struct.i2c_adapter** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.i2c_adapter*, %struct.i2c_adapter** %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @i2c_av_read(%struct.i2c_adapter* %11, i32 %12)
  %14 = load i32, i32* %7, align 4
  %15 = and i32 %13, %14
  %16 = load i32, i32* %8, align 4
  %17 = or i32 %15, %16
  %18 = call i32 @i2c_av_write(%struct.i2c_adapter* %9, i32 %10, i32 %17)
  ret void
}

declare dso_local i32 @i2c_av_write(%struct.i2c_adapter*, i32, i32) #1

declare dso_local i32 @i2c_av_read(%struct.i2c_adapter*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
